--- a/Yelp/Base.lproj/Main.storyboard
+++ b/Yelp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Oce-6Y-a1s">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="zDH-ud-YN5">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -13,9 +13,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="H7T-4j-7By">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="44" id="Gop-95-pjI">
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="H7T-4j-7By" id="STa-qA-jU7">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Gop-95-pjI" id="IbX-jy-lN5">
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -25,8 +25,78 @@
                             <outlet property="delegate" destination="Oce-6Y-a1s" id="tjU-Ct-x8b"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="YAS-aI-RdV"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xdj-kq-ciE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1395" y="741"/>
+        </scene>
+        <!--Map View Controller-->
+        <scene sceneID="3ge-vi-3hv">
+            <objects>
+                <viewController storyboardIdentifier="MapView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="GLH-CF-jjR" customClass="MapViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="I5s-6G-FOC"/>
+                        <viewControllerLayoutGuide type="bottom" id="ByV-Uj-yC1"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="b7Z-dK-Tu8">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lMq-vH-Q8x">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="lMq-vH-Q8x" firstAttribute="leading" secondItem="b7Z-dK-Tu8" secondAttribute="leading" id="4cP-3w-JGR"/>
+                            <constraint firstItem="lMq-vH-Q8x" firstAttribute="top" secondItem="b7Z-dK-Tu8" secondAttribute="top" id="LKa-n0-nhJ"/>
+                            <constraint firstAttribute="trailing" secondItem="lMq-vH-Q8x" secondAttribute="trailing" id="OZV-8H-Jtq"/>
+                            <constraint firstItem="ByV-Uj-yC1" firstAttribute="top" secondItem="lMq-vH-Q8x" secondAttribute="bottom" id="WRK-0O-YEF"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="map" destination="lMq-vH-Q8x" id="Jif-5c-d0f"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jbz-VB-5Fa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1929" y="47"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="Uvh-1j-dXE">
+            <objects>
+                <viewController storyboardIdentifier="DetailView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="EMd-Ee-09l" customClass="DetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="yUW-hf-fha"/>
+                        <viewControllerLayoutGuide type="bottom" id="XbR-4U-pey"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="1kg-mq-HmA">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Gll-7S-g6b" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2074" y="756"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="lrS-Q2-P0e">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zDH-ud-YN5" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2J4-1F-pZc">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="1" green="0.17876405310875687" blue="0.25315350209471488" alpha="1" colorSpace="calibratedRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Oce-6Y-a1s" kind="relationship" relationship="rootViewController" id="jON-EK-oIB"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="l7k-O9-1lk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="583" y="741"/>
         </scene>
